<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#fbead7"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/toolbar"
        android:background="@drawable/toolbar_shape"
        android:layout_width="match_parent"
        android:layout_height="90dp">
        <TextView
            android:text="@string/giaPha"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:textColor="@color/white"
            android:fontFamily="@font/font1"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="match_parent">
        <include android:id="@+id/layoutGP" layout="@layout/gp_info"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rlGiaPha"
            android:padding="16dp"
            android:backgroundTint="#FC4C02"
            android:background="@drawable/item_shape"
            android:layout_width="160dp"
            android:layout_height="70dp">
    <TextView
        android:id="@+id/tvCayGiaPha"
        android:textSize="13sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/cayGiaPha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
            <ImageView
                android:layout_toLeftOf="@+id/tvPhaDo"
                android:src="@drawable/ic_gp"
                android:layout_alignParentBottom="true"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:tint="@color/white" />
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/tvPhaDo"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/phaDo"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rlDsTv"
            android:layout_alignParentRight="true"
            android:padding="16dp"
            android:backgroundTint="#FC4C02"
            android:background="@drawable/item_shape"
            android:layout_width="160dp"
            android:layout_height="70dp">
            <TextView
                android:id="@+id/tvDanhsachTv"
                android:textSize="13sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/dsTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_toLeftOf="@+id/tvHoSoGd"
                android:src="@drawable/lv"
                android:layout_alignParentBottom="true"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:tint="@color/white" />
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/tvHoSoGd"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/hsGd"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_below="@+id/rlGiaPha"
            android:layout_alignParentRight="true"
            android:id="@+id/csMXH"
            android:padding="16dp"
            android:backgroundTint="#ffa500"
            android:background="@drawable/item_shape"
            android:layout_width="160dp"
            android:layout_height="70dp">
            <TextView
                android:id="@+id/tvMXH"
                android:textSize="13sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/tkbc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_toLeftOf="@+id/tvCSMXH"
                android:src="@drawable/lv"
                android:layout_alignParentBottom="true"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:tint="@color/white" />
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/tvCSMXH"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/tk"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_below="@+id/rlGiaPha"
            android:layout_alignParentLeft="true"
            android:id="@+id/rlTKBC"
            android:padding="16dp"
            android:backgroundTint="#ffa500"
            android:background="@drawable/item_shape"
            android:layout_width="160dp"
            android:layout_height="70dp">
            <TextView
                android:id="@+id/tvTKBC"
                android:textSize="13sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/ngay_gia_dinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_toLeftOf="@+id/tvTK"
                android:src="@drawable/lv"
                android:layout_alignParentBottom="true"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:tint="@color/white" />
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/tvTK"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/story"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>
    </LinearLayout>
</RelativeLayout>