<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/toolbar"
        android:background="@drawable/toolbar_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
  <RelativeLayout
      android:layout_marginTop="20dp"
      android:layout_width="match_parent"
      android:orientation="horizontal"
      android:layout_marginBottom="10dp"
      android:layout_height="wrap_content">
      <TextView
          android:layout_centerVertical="true"
          android:layout_alignParentStart="true"
          android:layout_gravity="center"
          android:layout_marginTop="10dp"
          android:text="@string/sk"
          android:textColor="@color/white"
          android:fontFamily="@font/font1"
          android:textStyle="bold"
          android:textSize="30sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/btnAddEvent"
          android:drawableStart="@drawable/plus"
          android:backgroundTint="@color/white"
          android:textColor="#FC4C02"
          android:fontFamily="@font/font1"
          android:text="@string/btnAddEventText"
          android:textSize="18sp"
          android:layout_alignParentEnd="true"
          android:layout_gravity="center"
          android:layout_width="wrap_content"
          android:layout_height="48dp"/>
  </RelativeLayout>
        <LinearLayout
            android:backgroundTint="#FAEBD7"
            android:background="@drawable/item_shape"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:paddingHorizontal="20dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"

                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="Giờ"
                    android:id="@+id/time"
                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textColor="#FC4C02"
                    android:textSize="22sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/time2"
                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="Ngày"
                    android:textColor="#FC4C02"

                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:id="@+id/time2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/time3"
                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/time3"
                    android:textColor="#FC4C02"
                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:id="@+id/time3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:text="@string/time4"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:fontFamily="@font/font1"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:text="Giờ"
                    android:textColor="#FC4C02"

                    android:id="@+id/time4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <CalendarView
            android:layout_gravity="center"
            android:background="@drawable/item_shape"
            android:backgroundTint="#FAEBD7"
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEvent"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_below="@id/toolbar"
        android:id="@+id/cardViewEvent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/item_shape"
        app:cardCornerRadius="20sp"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/font1"
            android:text="@string/noEventsToday"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>